mirror_lang/test/invalid/invalid_variable.mirror
(SET $Invalid = 10 TES)